--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,15 @@
     </style>
 
     <style name="Theme.Final_pj" parent="Base.Theme.Final_pj" />
+
+    <style name="Theme.Final_pj.NoActionBar" parent="Base.Theme.Final_pj" />
+
+    <style name="WeekHeaderStyle">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">#757575</item>
+    </style>
 </resources>
