--- a/app/src/main/res/layout/activity_add_course.xml
+++ b/app/src/main/res/layout/activity_add_course.xml
@@ -52,7 +52,8 @@
             android:id="@+id/spinner_day"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp" />
+            android:layout_marginBottom="8dp"
+            android:entries="@array/days_of_week" />
 
         <LinearLayout
             android:layout_width="match_parent"
